--- a/configs/secrets.env
+++ b/configs/secrets.env
@@ -1,6 +1,6 @@
 # SAMPLE VALUES - replace in CI/CD variables or keep locally (do not commit real secrets)
 
-DOCKER_REGISTRY_URL=registry.remita.net
+DOCKER_REGISTRY_URL=registry.example.com
 DOCKER_REGISTRY_USER=registry_user_placeholder
 DOCKER_REGISTRY_PASSWORD=registry_password_placeholder
 
